--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -830,9 +830,9 @@
 <body>
 
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;"> 
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -874,7 +874,7 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
                 <ul>
@@ -973,11 +973,11 @@
                     <img src="./素材/04-主廚上菜/restaurant_chicken.JPG" alt="">
                 </div>
                 <div class="decorationBox"></div>
-                <div class="titleBox" data-aos="fade-left"  data-aos-duration="1200">
+                <div class="titleBox" data-aos="zoom-in-right" data-aos-duration="1200">
                     <div class="decoration"></div>
                     <p>烤春雞</p>
                 </div>
-                <div class="textBox" data-aos="fade-left"  data-aos-duration="1200">
+                <div class="textBox" data-aos="zoom-in-right"  data-aos-duration="1200">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
@@ -1010,11 +1010,11 @@
                     <img src="./素材/04-主廚上菜/restaurant_casserole.jpg" alt="">
                 </div>
                 <!-- <div class="decorationBox" data-aos="fade-left"  data-aos-duration="1300"></div> -->
-                <div class="titleBox"data-aos="fade-left"  data-aos-duration="1200">
+                <div class="titleBox" data-aos="zoom-in-right"  data-aos-duration="1200">
                     <div class="decoration" ></div>
                     <p>野菇焗烤飯</p>
                 </div>
-                <div class="textBox" data-aos="fade-left"  data-aos-duration="1200">
+                <div class="textBox" data-aos="zoom-in-right"  data-aos-duration="1200">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
