--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -653,7 +653,7 @@
             .page_2_decoration4 {
 
                 height: 100px;
-                top: 1674px;
+                top: 1670px;
                 display: block;
             }
 
@@ -950,9 +950,9 @@
 <body>
 
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;"> 
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -994,7 +994,7 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
                 <ul>
@@ -1031,7 +1031,7 @@
                 <a class="nav_btn_homestay  " href="https://forestprince.mmweb.tw/">友站連結:森王子民宿</a>
             </div>
         </div>
-
+       
     </nav>
     <div class="mobile_mask"></div>
     <div class="page_2 page">
