--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -449,7 +449,7 @@
         .imgBox_m::before {
             position: absolute;
 
-            left: 233px;
+            left: 1000px;
             top: 300px;
             content: "";
             height: 66px;
@@ -467,107 +467,107 @@
 
         @keyframes pockerAct3 {
             0% {
-                left: 150px;
+                left: 1000px;
                 transform: rotate(-15deg);
             }
 
             5% {
-                left: 240px;
+                left: 910px;
                 transform: rotate(15deg);
             }
 
             10% {
-                left: 330px;
+                left: 820px;
                 transform: rotate(-15deg);
             }
 
             15% {
-                left: 420px;
+                left: 730px;
                 transform: rotate(15deg);
             }
 
             20% {
-                left: 510px;
+                left: 640px;
                 transform: rotate(-15deg);
             }
 
             25% {
-                left: 600px;
+                left: 550px;
                 transform: rotate(15deg);
             }
 
             30% {
-                left: 690px;
+                left: 460px;
                 transform: rotate(-15deg);
             }
 
             35% {
-                left: 780px;
+                left: 370px;
                 transform: rotate(15deg);
             }
 
             40% {
-                left: 870px;
+                left: 280px;
                 transform: rotate(-15deg);
             }
 
             45% {
-                left: 960px;
+                left: 190px;
                 transform: rotate(15deg);
             }
 
             50% {
-                left: 900px;
+                left: 90px;
                 transform: rotate(15deg) rotateY(180deg);
             }
 
             55% {
-                left: 810px;
+                left: 180px;
                 transform: rotate(-15deg) rotateY(180deg);
             }
 
             60% {
-                left: 720px;
+                left: 270px;
                 transform: rotate(15deg)rotateY(180deg);
             }
 
             65% {
-                left: 630px;
+                left: 360px;
                 transform: rotate(-15deg) rotateY(180deg);
             }
 
             70% {
-                left: 540px;
+                left: 450px;
                 transform: rotate(15deg) rotateY(180deg);
             }
 
             75% {
-                left: 450px;
+                left: 540px;
                 transform: rotate(-15deg) rotateY(180deg);
             }
 
             80% {
-                left: 360px;
+                left: 630px;
                 transform: rotate(15deg) rotateY(180deg);
             }
 
             85% {
-                left: 270px;
+                left: 720px;
                 transform: rotate(-15deg) rotateY(180deg);
             }
 
             90% {
-                left: 180px;
+                left: 810px;
                 transform: rotate(15deg) rotateY(180deg);
             }
 
             95% {
-                left: 90px;
+                left: 900px;
                 transform: rotate(-15deg) rotateY(180deg);
             }
 
             100% {
-                left: 200px;
+                left: 1000px;
                 transform: rotate(15deg);
             }
         }
@@ -576,7 +576,7 @@
         .imgBox_m::after {
             position: absolute;
             top: 272px;
-            left: 50px;
+            left: 900px;
             content: "";
             height: 88px;
             width: 42px;
@@ -592,111 +592,111 @@
 
         @keyframes pockerAct4 {
             0% {
-                left: 50px;
+                left: 900px;
                 transform: rotate(15deg);
 
             }
 
             5% {
-                left: 140px;
+                left: 810px;
                 transform: rotate(-15deg);
 
             }
 
             10% {
-                left: 230px;
+                left: 720px;
                 transform: rotate(15deg);
             }
 
             15% {
-                left: 320px;
+                left: 630px;
                 transform: rotate(-15deg);
             }
 
             20% {
-                left: 410px;
+                left: 540px;
                 transform: rotate(15deg);
             }
 
             25% {
-                left: 500px;
+                left: 450px;
                 transform: rotate(-15deg);
             }
 
             30% {
-                left: 590px;
+                left: 360px;
                 transform: rotate(15deg);
             }
 
             35% {
-                left: 680px;
+                left: 270px;
                 transform: rotate(-15deg);
             }
 
             40% {
-                left: 770px;
+                left: 180px;
                 transform: rotate(15deg);
             }
 
             45% {
-                left: 860px;
+                left: 90px;
                 transform: rotate(-15deg);
             }
 
 
 
             50% {
-                left: 1050px;
+                left: 190px;
                 transform: rotate(-15deg) rotateY(-180deg)
             }
 
             55% {
-                left: 960px;
+                left: 330px;
                 transform: rotate(15deg) rotateY(-180deg)
             }
 
             60% {
-                left: 870px;
+                left: 420px;
                 transform: rotate(-15deg) rotateY(-180deg);
             }
 
             65% {
-                left: 780px;
+                left: 510px;
                 transform: rotate(15deg) rotateY(-180deg);
             }
 
             70% {
-                left: 690px;
+                left: 600px;
                 transform: rotate(-15deg) rotateY(-180deg);
             }
 
             75% {
-                left: 590px;
+                left: 690px;
                 transform: rotate(15deg) rotateY(-180deg);
             }
 
             80% {
-                left: 490px;
+                left: 780px;
                 transform: rotate(-15deg) rotateY(-180deg);
             }
 
             85% {
-                left: 420px;
+                left: 870px;
                 transform: rotate(15deg) rotateY(-180deg);
             }
 
             90% {
-                left: 330px;
+                left: 960px;
                 transform: rotate(-15deg) rotateY(-180deg);
             }
 
             95% {
-                left: 240px;
+                left: 1050px;
                 transform: rotate(15deg) rotateY(-180deg);
             }
 
             100% {
-                left: 50px;
+                left: 900px;
                 transform: rotate(-15deg);
             }
         }
@@ -818,14 +818,12 @@
 
             .swiper-button-prev,
             .swiper-container-rtl .swiper-button-next {
-                left: 0%;
-                right: auto;
+                display: none;
             }
 
             .swiper-button-next,
             .swiper-container-rtl .swiper-button-prev {
-                right: 0%;
-                left: auto;
+                display: none;
             }
 
             .extraPage_princess_banner {
@@ -878,9 +876,9 @@
 <body>
 
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;"> 
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -922,7 +920,7 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
                 <ul>
