--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -334,9 +334,7 @@
         }
 
         @media (max-width: 849px) {
-            .fas {
-                transform: unset
-            }
+        
 
             .wedding_themeGroup {
                 display: none;
@@ -464,9 +462,9 @@
 
 <body>
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;"> 
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -508,7 +506,7 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
                 <ul>
@@ -728,7 +726,7 @@
                 <div class="back"></div>
                 <div class="canclePoint">
 
-                    <i class="fas fa-times-circle fa-3x " style="color:white ; "></i>
+                    <i class="fas fa-times-circle fa-3x  " style="color:white ; "></i>
                 </div>
                
                 <div class="swiper-container gallery-top swiper-top">
