--- a/GroupProject-Annie's garden/FrontEnd/diy-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/diy-index.html
@@ -361,9 +361,9 @@
         }
 
         @media (max-width: 768px) {
-            .fas {
+            /* .fas {
                 transform: unset
-            }
+            } */
 
             .extraPage_diy_themeGroup {
                 display: none;
@@ -475,9 +475,9 @@
 
 <body>
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;"> 
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -519,7 +519,7 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
                 <ul>
