--- a/GroupProject-Annie's garden/FrontEnd/talk-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/talk-index.html
@@ -381,9 +381,9 @@
 
 <body>
     <nav class="nav" id="nav">
-        <a href="./index.html" style=" height:100%;"> 
-            <div class="nav_logo"></div>
-        </a>
+        <div class="nav_logo">
+
+        </div>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -417,29 +417,18 @@
             <div class="burger_decoration3 burger_decorations"></div>
         </div>
         <div class="mobile_nav_btns">
-            <div class="nav_btn_about nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_about nav_btn_space mobile_nav_btn ">
                 <a href="./index.html">關於安妮公主</a>
             </div>
-            <div class="nav_btn_information nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_information nav_btn_space mobile_nav_btn ">
                 <a href="./info-index.html">園區資訊</a>
             </div>
-            <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_guide nav_btn_space mobile_nav_btn ">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg extraPage_trigger" ></i>
+                <i class="fas fa-angle-down fa-lg"></i>
             </div>
             <div class="guide_extraPages">
-                <ul>
-                    <li class="pancakePage ">
-                        <a href="./pancake-index.html" class="changeSite">鬆餅小屋</a>
-                    </li>
-                    <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2">手作Diy</a>
-                    </li>
-                    <li class="princessPage">
-                        <a href="./princess-index.html" class="changeSite">公主故事屋</a>
-                    </li>
-                </ul>
-                <!-- <div class="pancakePage">
+                <div class="pancakePage">
                     <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
@@ -447,15 +436,15 @@
                 </div>
                 <div class="princessPage">
                     <a href="./princess-index.html">公主故事屋</a>
-                </div> -->
+                </div>
             </div>
-            <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_eat nav_btn_space mobile_nav_btn ">
                 <a href="./eat-index.html">主廚上菜</a>
             </div>
-            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn ">
                 <a href="./wedding-index.html">見證幸福</a>
             </div>
-            <div class="nav_btn_talk nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_talk nav_btn_space mobile_nav_btn ">
                 <a href="./talk-index.html" class="">安妮悄悄話</a>
             </div>
             <div class="mobile_nav_btn">
