--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -830,9 +830,9 @@
 <body>
 
     <nav class="nav" id="nav">
-        <a href="./index.html" style=" height:100%;"> 
-            <div class="nav_logo"></div>
-        </a>
+        <div class="nav_logo">
+
+        </div>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -866,29 +866,18 @@
             <div class="burger_decoration3 burger_decorations"></div>
         </div>
         <div class="mobile_nav_btns">
-            <div class="nav_btn_about nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_about nav_btn_space mobile_nav_btn ">
                 <a href="./index.html">關於安妮公主</a>
             </div>
-            <div class="nav_btn_information nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_information nav_btn_space mobile_nav_btn ">
                 <a href="./info-index.html">園區資訊</a>
             </div>
-            <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_guide nav_btn_space mobile_nav_btn ">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
+                <i class="fas fa-angle-down fa-lg"></i>
             </div>
             <div class="guide_extraPages">
-                <ul>
-                    <li class="pancakePage ">
-                        <a href="./pancake-index.html" class="changeSite">鬆餅小屋</a>
-                    </li>
-                    <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2">手作Diy</a>
-                    </li>
-                    <li class="princessPage">
-                        <a href="./princess-index.html" class="changeSite">公主故事屋</a>
-                    </li>
-                </ul>
-                <!-- <div class="pancakePage">
+                <div class="pancakePage">
                     <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
@@ -896,15 +885,15 @@
                 </div>
                 <div class="princessPage">
                     <a href="./princess-index.html">公主故事屋</a>
-                </div> -->
+                </div>
             </div>
-            <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_eat nav_btn_space mobile_nav_btn ">
                 <a href="./eat-index.html">主廚上菜</a>
             </div>
-            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn ">
                 <a href="./wedding-index.html">見證幸福</a>
             </div>
-            <div class="nav_btn_talk nav_btn_space mobile_nav_btn mobile_afterSite">
+            <div class="nav_btn_talk nav_btn_space mobile_nav_btn ">
                 <a href="./talk-index.html" class="">安妮悄悄話</a>
             </div>
             <div class="mobile_nav_btn">
@@ -925,7 +914,7 @@
 
             </div>
             <div class="banner_decorationBox2">
-                <div class="banner_text2 "><a href="./pancake-index.html"> >> MENU下載</a></div>
+                <div class="banner_text2 "><a href="./princess-index.html"> >> MENU下載</a></div>
             </div>
         </div>
         <div class="box_container ">
@@ -950,15 +939,15 @@
         <div class="page4_specialContainerGroup">
             <div class="page4_specialContainer eat_show1">
 
-                <div class="imgBox " data-aos="fade-down" data-aos-duration="900">
+                <div class="imgBox ">
                     <img src="./素材/04-主廚上菜/restaurant_pork.jpg" alt="" class="">
                 </div>
-                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
-                <div class="titleBox" data-aos="fade-up" data-aos-duration="1200">
+                <div class="decorationBox"></div>
+                <div class="titleBox">
                     <div class="decoration"></div>
                     <p>德國豬腳</p>
                 </div>
-                <div class="textBox" data-aos="fade-up" data-aos-duration="1200">
+                <div class="textBox">
                     <p>公主一手抓著月桂葉，一手抓著家傳秘訣食譜，</p>
                     <p>仔細地將月桂葉、百里香、丁香這些香料跟脂肪較厚的豬後小腿，</p>
                     <p>用力的搓揉，將一隻隻的後小腿封存醃製!</p>
@@ -969,15 +958,15 @@
             </div>
             <div class="page4_specialContainer eat_show2">
 
-                <div class="imgBox" data-aos="fade-right" data-aos-duration="900">
+                <div class="imgBox">
                     <img src="./素材/04-主廚上菜/restaurant_chicken.JPG" alt="">
                 </div>
                 <div class="decorationBox"></div>
-                <div class="titleBox" data-aos="zoom-in-right" data-aos-duration="1200">
+                <div class="titleBox">
                     <div class="decoration"></div>
                     <p>烤春雞</p>
                 </div>
-                <div class="textBox" data-aos="zoom-in-right"  data-aos-duration="1200">
+                <div class="textBox">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
@@ -987,12 +976,12 @@
             </div>
             <div class="page4_specialContainer eat_show3">
 
-                <div class="imgBox" data-aos="fade-down" data-aos-duration="900">
+                <div class="imgBox">
                     <img src="./素材/04-主廚上菜/restaurant_steak.jpg" alt="">
                 </div>
-                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
+                <div class="decorationBox"></div>
                 <div class="titleBox">
-                    <div class="decoration" data-aos="fade-left" data-aos-duration="1200"></div>
+                    <div class="decoration"></div>
                     <p>紅磚牛排</p>
                 </div>
                 <div class="textBox">
@@ -1004,17 +993,17 @@
                     <p>連皮帶肉搭配酸白菜、黃芥末的一口! 真期待!</p>
                 </div>
             </div>
-            <div class="page4_specialContainer eat_show4" >
+            <div class="page4_specialContainer eat_show4 ">
 
-                <div class="imgBox" data-aos="fade-right" data-aos-duration="900">
+                <div class="imgBox">
                     <img src="./素材/04-主廚上菜/restaurant_casserole.jpg" alt="">
                 </div>
-                <!-- <div class="decorationBox" data-aos="fade-left"  data-aos-duration="1300"></div> -->
-                <div class="titleBox" data-aos="zoom-in-right"  data-aos-duration="1200">
-                    <div class="decoration" ></div>
+                <div class="decorationBox"></div>
+                <div class="titleBox">
+                    <div class="decoration"></div>
                     <p>野菇焗烤飯</p>
                 </div>
-                <div class="textBox" data-aos="zoom-in-right"  data-aos-duration="1200">
+                <div class="textBox">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
@@ -1024,15 +1013,15 @@
             </div>
             <div class="page4_specialContainer  eat_show5 ">
 
-                <div class="imgBox" data-aos="fade-down" data-aos-duration="900">
+                <div class="imgBox">
                     <img src="./素材/04-主廚上菜/restaurant_pasta.jpg" alt="">
                 </div>
-                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
-                <div class="titleBox" data-aos="fade-left" data-aos-duration="1200">
+                <div class="decorationBox"></div>
+                <div class="titleBox">
                     <div class="decoration"></div>
                     <p>番茄海鮮義大利麵</p>
                 </div>
-                <div class="textBox" data-aos="fade-left" data-aos-duration="1200">
+                <div class="textBox">
                     <p>公主一手抓著月桂葉，一手抓著家傳秘訣食譜，</p>
                     <p>仔細地將月桂葉、百里香、丁香這些香料跟脂肪較厚的豬後小腿，</p>
                     <p>用力的搓揉，將一隻隻的後小腿封存醃製!</p>
