--- a/GroupProject-Annie's garden/FrontEnd/template.html
+++ b/GroupProject-Annie's garden/FrontEnd/template.html
@@ -240,21 +240,10 @@
             </div>
             <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
+                <i class="fas fa-angle-down fa-lg"></i>
             </div>
             <div class="guide_extraPages">
-                <ul>
-                    <li class="pancakePage ">
-                        <a href="./pancake-index.html" class="changeSite">鬆餅小屋</a>
-                    </li>
-                    <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2">手作Diy</a>
-                    </li>
-                    <li class="princessPage">
-                        <a href="./princess-index.html" class="changeSite">公主故事屋</a>
-                    </li>
-                </ul>
-                <!-- <div class="pancakePage">
+                <div class="pancakePage">
                     <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
@@ -262,7 +251,7 @@
                 </div>
                 <div class="princessPage">
                     <a href="./princess-index.html">公主故事屋</a>
-                </div> -->
+                </div>
             </div>
             <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./eat-index.html">主廚上菜</a>
