--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -74,10 +74,22 @@
 
         .wedding_titleBox {
             width: 444.5px;
-            border-bottom: 1px #DAB059 solid;
-            margin: 46px auto;
+            margin: 100px auto;
             letter-spacing: 3px;
+            position: relative;
         }
+
+        .wedding_titleBox::after {
+            content: "";
+            position: absolute;
+            width: 90%;
+            height: 1px;
+            top: 90%; 
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #DAB059;
+        }
+
 
         .wedding_title {
             text-align: center;
@@ -262,43 +274,7 @@
             display: block;
         }
 
-        /* 
-        .swiper-container {
-            width: 100%;
-            height: 300px;
-            margin-left: auto;
-            margin-right: auto;
-        }
 
-        .swiper-slide {
-            background-size: cover;
-            background-position: center;
-        }
-
-        .specialSwipper {
-            background-position: 90% 30%;
-
-        }
-
-        .gallery-top {
-            height: 80%;
-            width: 100%;
-        }
-
-        .gallery-thumbs {
-            height: 20%;
-            box-sizing: border-box;
-            padding: 10px 0;
-        }
-
-        .gallery-thumbs .swiper-slide {
-            height: 100%;
-            opacity: 0.4;
-        }
-
-        .gallery-thumbs .swiper-slide-thumb-active {
-            opacity: 1;
-        } */
 
         .swiper-container {
             width: 100%;
@@ -370,9 +346,7 @@
         }
 
         @media (max-width: 849px) {
-            .fas {
-                transform: unset
-            }
+
 
             .wedding_themeGroup {
                 display: none;
@@ -407,12 +381,14 @@
             .swiper-container-rtl .swiper-button-next {
                 left: -11%;
                 right: auto;
+                color: gray
             }
 
             .swiper-button-next,
             .swiper-container-rtl .swiper-button-prev {
                 right: -11%;
                 left: auto;
+                color: gray
             }
 
             .page_5_banner {
@@ -439,14 +415,7 @@
             }
 
             .wedding_titleBox::after {
-                content: "";
-                position: absolute;
-                background-color: #F6D3E2;
-                width: 250px;
-                height: 2px;
-                left: 50%;
-                bottom: -6px;
-                transform: translateX(-50%);
+                width: 55%;               
             }
 
             .wedding_titleContent {
@@ -498,9 +467,9 @@
 
 <body>
     <nav class="nav" id="nav">
-        <div class="nav_logo">
-
-        </div>
+        <a href="./index.html" style=" height:100%;">
+            <div class="nav_logo"></div>
+        </a>
         <div class="nav_btnGroup">
             <!-- <div class="burger_decoration1 burger_decorations"></div>
             <div class="burger_decoration2 burger_decorations"></div>
@@ -534,18 +503,29 @@
             <div class="burger_decoration3 burger_decorations"></div>
         </div>
         <div class="mobile_nav_btns">
-            <div class="nav_btn_about nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_about nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./index.html">關於安妮公主</a>
             </div>
-            <div class="nav_btn_information nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_information nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./info-index.html">園區資訊</a>
             </div>
-            <div class="nav_btn_guide nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_guide nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./guide-index.html" class="special_a">園區導覽</a>
-                <i class="fas fa-angle-down fa-lg"></i>
+                <i class="fas fa-angle-down fa-lg extraPage_trigger"></i>
             </div>
             <div class="guide_extraPages">
-                <div class="pancakePage">
+                <ul>
+                    <li class="pancakePage ">
+                        <a href="./pancake-index.html" class="changeSite">鬆餅小屋</a>
+                    </li>
+                    <li class="diyPage">
+                        <a href="./diy-index.html" class="changeSite2">手作Diy</a>
+                    </li>
+                    <li class="princessPage">
+                        <a href="./princess-index.html" class="changeSite">公主故事屋</a>
+                    </li>
+                </ul>
+                <!-- <div class="pancakePage">
                     <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
@@ -553,15 +533,15 @@
                 </div>
                 <div class="princessPage">
                     <a href="./princess-index.html">公主故事屋</a>
-                </div>
+                </div> -->
             </div>
-            <div class="nav_btn_eat nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./eat-index.html">主廚上菜</a>
             </div>
-            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_wedding nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./wedding-index.html">見證幸福</a>
             </div>
-            <div class="nav_btn_talk nav_btn_space mobile_nav_btn ">
+            <div class="nav_btn_talk nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./talk-index.html" class="">安妮悄悄話</a>
             </div>
             <div class="mobile_nav_btn">
@@ -586,7 +566,8 @@
             </div>
         </div>
         <div class="wedding_themeGroup">
-            <div class="wedding_theme_l wedding_theme">
+            <div class="wedding_theme_l wedding_theme" data-aos="fade-down" data-aos-easing="linear"
+                data-aos-duration="900">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">婚禮花絮</div>
                     <div class="wedding_theme_titleBox_decorationBox"></div>
@@ -600,7 +581,8 @@
                     <img src="./素材/05-見證幸福/wedding_BTS.jpg" alt="" class="wedding_img">
                 </div>
             </div>
-            <div class="wedding_theme_m wedding_theme">
+            <div class="wedding_theme_m wedding_theme" data-aos="fade-down" data-aos-easing="linear"
+                data-aos-duration="1500">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">求婚告白</div>
                     <div class="wedding_theme_titleBox_decorationBox"></div>
@@ -614,7 +596,8 @@
                     <img src="./素材/05-見證幸福/wedding_photo.jpg" alt="" class="wedding_img">
                 </div>
             </div>
-            <div class="wedding_theme_r wedding_theme">
+            <div class="wedding_theme_r wedding_theme" data-aos="fade-down" data-aos-easing="linear"
+                data-aos-duration="2100">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">婚紗拍攝</div>
 
@@ -631,7 +614,7 @@
             </div>
         </div>
 
-
+        <!-- swiper -->
         <div class="swiper-container1 mobile_swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" style="background-image:url(./素材/05-見證幸福/swiper_pic_BTS/BTS_01.jpg)">
@@ -715,7 +698,7 @@
             <div class="swiper-button-next"></div>
         </div>
 
-
+        <!-- swiper -->
         <div class="box_container page5_toFooterSpace">
             <p>告白、求婚、生日、結婚紀念日、彌月、訂婚、 各種讓人歡喜幸福的特殊日子，</p>
             <p>讓安妮與您一起安排完全客製化的Party，歡迎來電洽詢 04-25931567(8) 林小姐!</p>
@@ -744,13 +727,16 @@
                 </div>
             </div>
         </div>
+
+        <!-- swiper -->
         <div class="fulscreen_mask">
             <div class="imgShow">
                 <div class="back"></div>
                 <div class="canclePoint">
 
-                    <i class="fas fa-times-circle fa-3x " style="color:white ; "></i>
+                    <i class="fas fa-times-circle fa-3x  " style="color:white ; "></i>
                 </div>
+
                 <div class="swiper-container gallery-top swiper-top">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" style="background-image:url(./素材/05-見證幸福/swiper_pic_BTS/BTS_01.jpg)">
@@ -828,7 +814,7 @@
                             style="background-image:url(./素材/05-見證幸福/swiper_pic_photo/photo_08.jpg)">
                         </div>
                     </div>
-                    <!-- Add Arrows -->
+
                     <div class="swiper-button-next swiper-button-white"></div>
                     <div class="swiper-button-prev swiper-button-white"></div>
                 </div>
@@ -895,7 +881,7 @@
                             style="background-image:url(./素材/05-見證幸福/swiper_pic_proposal/proposal_08.jpg)">
                         </div>
                     </div>
-                    <!-- Add Arrows -->
+
                     <div class="swiper-button-next swiper-button-white"></div>
                     <div class="swiper-button-prev swiper-button-white"></div>
                 </div>
@@ -931,7 +917,7 @@
         </div>
 
 
-
+        <!-- swiper -->
 
         <div class="returnBut">
             <div class="returnBut_text">Top</div>
@@ -1030,7 +1016,7 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
@@ -1046,13 +1032,13 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
                 },
                 autoplay: {
-                    delay: 2500,
+                    delay: 3500,
                     disableOnInteraction: false,
                 },
             });
@@ -1062,13 +1048,13 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
                 },
                 autoplay: {
-                    delay: 2500,
+                    delay: 4500,
                     disableOnInteraction: false,
                 },
             });
