--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -1048,8 +1048,8 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
-
         <!-- swiper -->
+        
         <div class="footer">
             <div class="footer_box">
                 <div class="footer_text">
@@ -1061,15 +1061,16 @@
                 </div>
                 <div class=" footer_iconGroupBox">
                     <div class="footer_iconGroup">
-                        <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
-                                alt="" class="footer_fbIcon" title="FB"></a>
+                        <a href="https://zh-tw.facebook.com/annies0425931567"><img
+                                src="./素材/07-icon與logo/FB_icon.png" alt="" class="footer_fbIcon" title="FB"></a>
                         <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
                                 class="footer_lineIcon" title="Line"></a>
                         <a href="https://www.instagram.com/explore/locations/246263666/"><img
                                 src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
                         </a>
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
-                            title="annie0942593931567@gmail.com">
+                        <div class="footer_gmailIcon">
+                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
