--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -697,8 +697,8 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
-
         <!-- swiper -->
+       
         <div class="box_container page5_toFooterSpace">
             <p>告白、求婚、生日、結婚紀念日、彌月、訂婚、 各種讓人歡喜幸福的特殊日子，</p>
             <p>讓安妮與您一起安排完全客製化的Party，歡迎來電洽詢 04-25931567(8) 林小姐!</p>
@@ -714,15 +714,16 @@
                 </div>
                 <div class=" footer_iconGroupBox">
                     <div class="footer_iconGroup">
-                        <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
-                                alt="" class="footer_fbIcon" title="FB"></a>
+                        <a href="https://zh-tw.facebook.com/annies0425931567"><img
+                                src="./素材/07-icon與logo/FB_icon.png" alt="" class="footer_fbIcon" title="FB"></a>
                         <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
                                 class="footer_lineIcon" title="Line"></a>
                         <a href="https://www.instagram.com/explore/locations/246263666/"><img
                                 src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
                         </a>
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
-                            title="annie0942593931567@gmail.com">
+                        <div class="footer_gmailIcon">
+                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
