--- a/GroupProject-Annie's garden/FrontEnd/pancake-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/pancake-index.html
@@ -2379,9 +2379,6 @@
         </a>
 
         <div class="footer">
-            <div class="pancake_footerDecoration">
-                <img src="./素材/08-鬆餅小屋/pancake_house-new.png" alt="">
-            </div>
             <div class="footer_box">
                 <div class="footer_text">
                     <p class="pc_use">營業時間 : 09：00 - 20：00（最晚用餐點單 19：00）</p>
@@ -2392,15 +2389,16 @@
                 </div>
                 <div class=" footer_iconGroupBox">
                     <div class="footer_iconGroup">
-                        <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
-                                alt="" class="footer_fbIcon" title="FB"></a>
+                        <a href="https://zh-tw.facebook.com/annies0425931567"><img
+                                src="./素材/07-icon與logo/FB_icon.png" alt="" class="footer_fbIcon" title="FB"></a>
                         <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
                                 class="footer_lineIcon" title="Line"></a>
                         <a href="https://www.instagram.com/explore/locations/246263666/"><img
                                 src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
                         </a>
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
-                            title="annie0942593931567@gmail.com">
+                        <div class="footer_gmailIcon">
+                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" >
+                        </div>
                     </div>
                 </div>
             </div>
