--- a/GroupProject-Annie's garden/FrontEnd/index.html
+++ b/GroupProject-Annie's garden/FrontEnd/index.html
@@ -281,9 +281,7 @@
             <div class="nav_logo"></div>
         </a>
         <div class="nav_btnGroup">
-            <!-- <div class="burger_decoration1 burger_decorations"></div>
-            <div class="burger_decoration2 burger_decorations"></div>
-            <div class="burger_decoration3 burger_decorations"></div> -->
+  
             <div class="nav_btn_about nav_btn_space nav_btn ">
                 <a href="./index.html">關於安妮公主</a>
             </div>
@@ -326,24 +324,16 @@
             <div class="guide_extraPages">
                 <ul>
                     <li class="pancakePage ">
-                        <a href="./pancake-index.html" class="changeSite">鬆餅小屋</a>
+                        <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2">手作Diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
                     </li>
                     <li class="princessPage">
-                        <a href="./princess-index.html" class="changeSite">公主故事屋</a>
+                        <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
                     </li>
                 </ul>
-                <!-- <div class="pancakePage">
-                    <a href="./pancake-index.html">鬆餅小屋</a>
-                </div>
-                <div class="diyPage">
-                    <a href="./diy-index.html">手作Diy</a>
-                </div>
-                <div class="princessPage">
-                    <a href="./princess-index.html">公主故事屋</a>
-                </div> -->
+        
             </div>
             <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./eat-index.html">主廚上菜</a>
